--- a/EasyMonads/EasyMonads.csproj
+++ b/EasyMonads/EasyMonads.csproj
@@ -6,14 +6,14 @@
       <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
       <Title>EasyMonads</Title>
       <Authors>Jack Edwards</Authors>
-      <Description>Maybe&lt;T&gt; and Either&lt;TL, TR&gt; monads</Description>
+      <Description>Maybe&lt;T&gt; and Either&lt;TLeft, TRight&gt; monads</Description>
       <PackageProjectUrl></PackageProjectUrl>
       <RepositoryUrl>https://github.com/Jack-Edwards/EasyMonads</RepositoryUrl>
       <PackageLicenseExpression>MIT</PackageLicenseExpression>
       <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
       <IncludeSymbols>True</IncludeSymbols>
       <SymbolPackageFormat>snupkg</SymbolPackageFormat>
-      <Version>1.3.0</Version>
+      <Version>1.4.0</Version>
    </PropertyGroup>
 
 </Project>
