Copy README on build

--- a/EasyMonads/EasyMonads.csproj
+++ b/EasyMonads/EasyMonads.csproj
@@ -17,4 +17,8 @@
       <Version>1.4.3</Version>
    </PropertyGroup>
 
+   <ItemGroup>
+      <None Include="../README.md" Pack="true" PackagePath="\"/>
+   </ItemGroup>
+   
 </Project>
