--- a/EasyMonads/EasyMonads.csproj
+++ b/EasyMonads/EasyMonads.csproj
@@ -2,7 +2,7 @@
 
    <PropertyGroup>
       <TargetFramework>netstandard2.1</TargetFramework>
-      <Nullable>disable</Nullable>
+      <Nullable>enable</Nullable>
       <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
       <Title>EasyMonads</Title>
       <Authors>Jack Edwards</Authors>
@@ -15,6 +15,7 @@
       <IncludeSymbols>True</IncludeSymbols>
       <SymbolPackageFormat>snupkg</SymbolPackageFormat>
       <Version>1.4.3</Version>
+      <LangVersion>9</LangVersion>
    </PropertyGroup>
 
    <ItemGroup>
